# TApplication

./: README.md  test.jks  说明
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/base/icegps/tapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CCSThreadMutex.cpp  CCSThreadMutex.h  CoordinateConversionService.h  DatumLibraryImplementation.cpp  EllipsoidLibraryImplementation.cpp  GeoidLibrary.cpp  JNICCSObjectTranslator.h  JNICoordinateConversionService.cpp  JNIFiomeths.cpp  egm2008_geoid_grid.cpp  native-lib.cpp
app/src/main/java/base/icegps/tapplication/: MainActivity.java
app/src/main/java/geotrans/coordsys/: CoordinateModel.java  CoordinateSystemConfig.java  GeodeticConfig.java  GeodeticCoordinateModel.java  Lambert1Config.java  Lambert1CoordinateModel.java  Lambert2Config.java  Lambert2CoordinateModel.java  MercatorScaleFactorConfig.java  MercatorScaleFactorCoordinateModel.java  MercatorStandardParallelConfig.java  MercatorStandardParallelCoordinateModel.java  MgrsConfig.java  MgrsCoordinateModel.java  PolarStereoScaleFactorConfig.java  PolarStereoScaleFactorCoordinateModel.java  PolarStereoStandardParallelConfig.java  PolarStereoStandardParallelCoordinateModel.java  TranMercConfig.java  TranMercCoordinateModel.java  UPSConfig.java  UPSCoordinateModel.java  USNGConfig.java  USNGCoordinateModel.java  UTMConfig.java  UTMCoordinateModel.java
app/src/main/java/geotrans3/coordinates/: CoordinateTuple.java  GeodeticCoordinates.java
app/src/main/java/geotrans3/enumerations/: CoordinateType.java
app/src/main/java/geotrans3/exception/: CoordinateConversionException.java
app/src/main/java/geotrans3/jni/: FillList.java
app/src/main/java/geotrans3/misc/: FormatOptions.java  StringHandler.java  StringToVal.java
app/src/main/java/geotrans3/parameters/: CoordinateSystemParameters.java
app/src/main/java/geotrans3/utility/: ReadEnv.java
app/src/main/java/jni/: JniServiceManager.java
app/src/main/res/layout/: activity_main.xml  convert_activity.xml  easting_northing_tuple.xml  hemisphere_tuple.xml  ups_coordsys.xml  utm_coordsys.xml
app/src/main/res/values/: strings.xml
app/src/test/java/base/icegps/tapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
